# AutoThread

./: CMakeLists.txt  README.md
AutoThread/include/: autothread.hpp
AutoThread/lib/cmake/AutoThread/: AutoThreadTargets.cmake
src/: autothread.cpp  autothread.hpp
